--- a/index.html
+++ b/index.html
@@ -17,30 +17,23 @@
       "esri/config",
       "esri/Map",
       "esri/views/MapView",
-
-      // adding in the modules for the graphic and graphic layer
       "esri/Graphic",
       "esri/layers/GraphicsLayer",
-
-      // adding in the module for the feature layers
       "esri/layers/FeatureLayer",
-
-      // adding editor widget
       "esri/widgets/Editor"
-
     ], function (esriConfig, Map, MapView, Graphic, GraphicsLayer, FeatureLayer, Editor) {
 
       esriConfig.apiKey = "AAPTxy8BH1VEsoebNVZXo8HurNAUgv3aeRUmzJ4ckMevLQLfVJhdc-z1-a5rmBvbZM6HiAtWhTkHR1uPqL3lwJdP49LWHB6rjySi-OGZeNP1ea6oiztHSf22dFyO6r4o94L1an9zLTOBsN3vlqSz7k8MyUO9e1udJ3zNViSQ518xOFVwCnGBfyh40rSb4E2X3zsumGVzsUowRjXGPUi8Odwr1Y9iVZinjPQa-7TSBIuR8E4.AT1_EtHHMprs";
       
       const map = new Map({
-        basemap: "arcgis-topographic" // Basemap layer
+        basemap: "arcgis-topographic"
       });
 
       const view = new MapView({
         map: map,
-        center: [-97.7431, 30.2672], // Longitude, latitude
-        zoom: 13, // Zoom level
-        container: "viewDiv" // Div element
+        center: [-97.7431, 30.2672],
+        zoom: 13,
+        container: "viewDiv"
       });
 
       const graphicsLayer = new GraphicsLayer();
@@ -48,7 +41,7 @@
 
       const point = { 
         type: "point",
-        longitude: -97.750689, // Stevie Ray Vaughan Statue
+        longitude: -97.750689,
         latitude: 30.263098 
       };
       
@@ -131,11 +124,26 @@
 
       map.add(airportLayer);
 
-      // Adding Editor widget
-      const editor = new Editor({
-        view: view
+      // Adding the new "myAirports" blank feature layer
+      const myAirports = new FeatureLayer({
+        url: "https://services.arcgis.com/LBbVDC0hKPAnLRpO/arcgis/rest/services/My_Airports_Popp/FeatureServer",
+        outFields: ["AirportCode"]
       });
 
+      map.add(myAirports);
+
+      // Set the point layer's LayerInfo
+      const pointInfos = {
+        layer: myAirports
+      };
+
+      // Begin Editor constructor linked to myAirports
+      const editor = new Editor({
+        view: view,
+        layerInfos: [pointInfos]
+      }); // End Editor constructor
+
+      // Add the widget to the view
       view.ui.add(editor, "top-right");
 
     });
